force-app/main/default/objects/JogoCompeticao__c/JogoCompeticao__c.object-meta.xml
<CustomObject>
    <label>Jogo da competição</label>
    <nameField>
        <displayFormat>J-{0000}</displayFormat>
        <label>Número do jogo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jogos da competição</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>