force-app/main/default/objects/JogoCompeticao__c/fields/Adversario__c.field-meta.xml
<CustomField>
    <fullName>Adversario__c</fullName>
    <label>Adversário</label>
    <length>255</length>
    <type>Text</type>
</CustomField>