force-app/main/default/objects/JogoCompeticao__c/fields/Competicao__c.field-meta.xml
<CustomField>
    <fullName>Competicao__c</fullName>
    <label>Competição</label>
    <referenceTo>Competicao__c</referenceTo>
    <relationshipLabel>Jogos da competição</relationshipLabel>
    <relationshipName>JogosCompeticao</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>