force-app/main/default/objects/JogoCompeticao__c/fields/LocalCompeticao__c.field-meta.xml
<CustomField>
    <fullName>LocalCompeticao__c</fullName>
    <label>Local da competição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>