force-app/main/default/objects/JogoCompeticao__c/fields/NomeTreinador__c.field-meta.xml
<CustomField>
    <fullName>NomeTreinador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome do treinador</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Treinador</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Competicoes</relationshipName>
    <type>Lookup</type>
</CustomField>