force-app/main/default/objects/JogoCompeticao__c/fields/Placar__c.field-meta.xml
<CustomField>
    <fullName>Placar__c</fullName>
    <label>Placar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>