force-app/main/default/objects/JogoCompeticao__c/fields/Resultado__c.field-meta.xml
<CustomField>
    <fullName>Resultado__c</fullName>
    <label>Resultado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vitória</fullName>
            </value>
            <value>
                <fullName>Derrota</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>