force-app/main/default/objects/JogoCompeticao__c/fields/SexoTurma__c.field-meta.xml
<CustomField>
    <fullName>SexoTurma__c</fullName>
    <label>Sexo da turma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feminino</fullName>
            </value>
            <value>
                <fullName>Masculino</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>